fixed overflow

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -115,3 +115,11 @@ li {
 html.stop-scrolling body {
 	overflow: hidden;
 }
+.no-scrollbar::-webkit-scrollbar {
+	display: none;
+}
+
+.no-scrollbar {
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
